# reverso

./: .gitignore  README.md  build.sh  install.sh  pyproject.toml  unistall.sh
src/reverso/: __init__.py  reverso.py  reversoconfig.py
src/reverso.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/reverso/agents/: __init__.py  agent.py  agentbuilder.py  agentcache.py  cnnagent.py  dynamicagent.py  lstmagent.py  mlpagent.py  nnagent.py
src/reverso/core/: __init__.py  analysis.py  environment.py  network.py  pertubations.py
src/reverso/data/: __init__.py  collection.py  experiments.py
src/reverso/utilities/: __init__.py  configconverter.py  dictobj.py  distribution.py  file.py  hpvector.py  jsonencoder.py  loghelper.py  memlist.py  metrics.py  temphandler.py  workspaceinfo.py
